src/objects/Induction__c.object
<CustomObject>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationofInduction__c</fullName>
        <label>Location of Induction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Inductions</relationshipLabel>
        <relationshipName>Inductions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequiredBy__c</fullName>
        <label>Required By</label>
        <type>Date</type>
    </fields>
    <label>Induction</label>
    <nameField>
        <label>Name of Induction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inductions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>